<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_format_list_bulleted_black"
            android:title="@string/Menu1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/Menu2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/op2">
        <menu>
            <item
                android:id="@+id/nav_agregar_remoto"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Menu1" />

            <item
                android:id="@+id/cam"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/camara" />

            <item
                android:id="@+id/nav_listar_R"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/listarR" />
        </menu>
    </item>

</menu>
